sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: illegal start of simple pattern
  var:Double ecart = getNombreValeurs()
     ^AlgCombSort:4: error: '=' expected but ';' found.
  var inv = true
^AlgCombSort:5: error: illegal start of simple pattern
  var:Double  i = 0
     ^AlgCombSort:6: error: '=' expected but ';' found.
  while ( ecart>=1 || inv ) {
^